# evo-tools

./: .gitmodules  README.md  pyproject.toml
ai-editor/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
ai-editor/public/: index.html  style.css
ai-editor/public/assets/: default_project.json5  nodes.json5  types.json5
ai-editor/public/assets/styles/: dialog.css  editor.css  explorer.css  main.css  table.css
ai-editor/rules/: example.json5
ai-editor/src/: main.ts  map.ts  project.ts  table.ts
ai-editor/src/graph/: ai_editor.ts  ai_graph_editor.ts  editor.ts  graph_editor.ts  manager.ts
ai-editor/src/utils/: dialog.ts  event.ts  project.ts
ai-editor/src/views/: dialogs.ts  editor.ts  explorer.ts  table.ts
ai-editor/src/views/dialogs/: confirm_dialog.ts  graph_settings_dialog.ts  new_graph_dialog.ts
ll-app-initializer/: README.md  pyproject.toml
ll-app-initializer/src/: main.py
ll-app-initializer/template/: .cproject  .project  CMakeLists.txt  cmake_build_command.xml  cmake_cconfigurations.xml
ll-app-initializer/template/App/: app.c
ll-app-initializer/template/cmake/stm32cubemx/: CMakeLists.txt
src/evo_utils/: __init__.py  config.py
table-viewer/: README.md  config.json  main.py  pyproject.toml
tests/: test_config.py
tests/fixtures/2026/: table.json5
tests/fixtures/2026/robots/testbot/: actions.json5  robot.json5
