[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evo-utils"
version = "0.1.0"
description = "Shared Python utilities for Evolutek robots"
requires-python = ">=3.11"
dependencies = [
    "pyjson5>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evo_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
